--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
          <artifactId>spring-boot-starter-json</artifactId>
          <version>2.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+         </dependency>
+
 		<dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
